--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </nav>
   </header>
 
-  <div class="container">
+  <div class="container mb-10">
     <div class="row gx-3 gy-5">
       <div class="col-xxl-7 col-xl-9">
 
@@ -166,6 +166,7 @@
         </div>
 
       </div>
+
     </div>
 
     <footer class="bg-dark text-white py-3 fixed-bottom">
